# e_learning

./: .dockerignore  .env.example  .gitignore  Dockerfile  RAILWAY.md  README.md  docker-compose.yml  package.json  railway.toml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: .gitkeep
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: accounts.py  analytics.py  assignments.py  auth.py  catalog.py  contents.py  contracts.py  courses.py  enrollments.py  exams.py  learning.py  payments.py  shipping.py  support.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  core_entities.py  domain.py  platform.py
apps/api/app/schemas/: __init__.py  platform.py
apps/api/app/scripts/: seed.py
apps/api/app/services/: learning_events.py
apps/api/tests/: test_health.py
apps/web/: .dockerignore  Dockerfile  Dockerfile.dev  next.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AppNav.tsx  UsageGuidePanel.module.css  UsageGuidePanel.tsx
apps/web/src/lib/: api.ts  types.ts
infra/terraform/: main.tf
infra/terraform/modules/cognito/: main.tf
infra/terraform/modules/ecs/: main.tf
infra/terraform/modules/rds/: main.tf
infra/terraform/modules/vpc/: main.tf
scripts/: dev-up.ps1  dev-up.sh  setup-postgres.ps1  setup-postgres.sh
sql/: 001_schema.sql  002_features.sql  003_core_entities.sql
(+14 files in other folders)
