[project]
name = "e-learning-api"
version = "0.1.0"
description = "eラーニング統合プラットフォーム API"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "sqlalchemy==2.0.40",
  "asyncpg==0.30.0",
  "psycopg2-binary==2.9.10",
  "alembic==1.15.2",
  "pydantic==2.11.3",
  "pydantic-settings==2.8.1",
  "python-jose[cryptography]==3.4.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.0.1",
  "httpx==0.28.1",
  "python-multipart==0.0.20",
  "boto3==1.37.34",
  "redis==5.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "pytest-asyncio==0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
